Adicionado os arquivos 'projetos.html', 'contato.html'. Modificado os links para serem direcionados para os arquivos. Adicionados os elementos básicos em cada arquivo para apenas adicionar o conteúdo posteriormente.

--- a/main.html
+++ b/main.html
@@ -205,8 +205,8 @@
     <body>
         <div class="topnav">
             <p class="titulo">Paulo Franquini</p>
-            <a class="contato" href="#contato">Contato</a>
-            <a class="projetos" href="#projetos">Projetos</a>
+            <a class="contato" href="contato.html">Contato</a>
+            <a class="projetos" href="projetos.html">Projetos</a>
             <a class="active" href="#home">Quem sou?</a>
         </div>
 
@@ -256,7 +256,7 @@
                     Veja meus projetos aqui:
                 </p>
 
-                <a href="/projetos.html">Projetos</a>
+                <a href="projetos.html">Projetos</a>
             </div>
 
             <img src="images/Capturar.PNG" alt="Foto projeto">
